Init migration.